feat: 电子书 Bangumi 轻小说刮削 + 视频/电子书多项修复
- BangumiService 增加 v0 搜索和标签过滤（novel/manga 子类型）
- 新增 EbookBangumiScrapeService：Bangumi 搜索/绑定/系列传播
- EbookController 增加 Bangumi 搜索绑定端点和图片代理端点
- 自动刮削改为优先 Bangumi，回退 Open Library
- EPUB 扫描时提取内嵌封面保存到本地
- 电子书整理时重命名为 {系列名} Vol.{卷号} 格式
- 电子书封面命名区分系列级和单行本级
- 电子书写操作加 dbWriteLock 解决 SQLITE_BUSY
- 解决 organize 时重复记录导致的 UNIQUE 约束冲突
- 用户触发的扫描增加 organizeAll 流程
- TitleCleaner 增加中文句号处理
- 视频目录匹配清洗后比较，防止嵌套目录
- 修复视频 poster 重命名丢失 -poster 后缀问题